<resources>
    <string name="app_name">Sub Tub</string>
    <string name="enter_email">Enter email id</string>
    <string name="enter_password">Enter password</string>
    <string name="welcome_back">Welcome Back 👋</string>
    <string name="admin_login"><u>Admin Login</u></string>
    <string name="welcome_back_admin">Welcome back, Admin 👋</string>
    <string name="enter_student_details">Enter student details.</string>
    <string name="create_account">Create account</string>
    <string name="permanent">Permanent</string>
    <string name="pick">Pick</string>
    <string name="drop">Drop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="GOOGLE_API_KEY" >AIzaSyB0w2C8MNpALpTzclTsI5tpwuRsOVsVjok</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>