<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".authentication.CreateUserActivity">



    <ImageView
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:id="@+id/iv_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="1dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/gray_dark"
        android:id="@+id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/enter_student_details"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/orange_dark"
        android:fontFamily="@font/open_sans_semi_bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        style="@style/MaterialInputView"
        android:background="@drawable/circularbordersolid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="74dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edittext"
            android:background="@drawable/circularbordersolid"
            style="@style/MaterialInputTextField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/enter_email"
            android:textColor="@color/white"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_pass"
        style="@style/MaterialInputView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/circularbordersolid"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_email">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_edittext"
            style="@style/MaterialInputTextField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/circularbordersolid"
            app:layout_constraintTop_toBottomOf="@id/text_input_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/enter_password"
            android:textColor="@color/white"
            android:maxLength="20"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_username"
        style="@style/MaterialInputView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/circularbordersolid"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_pass">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edittext"
            style="@style/MaterialInputTextField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/circularbordersolid"
            app:layout_constraintTop_toBottomOf="@id/text_input_pass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="Full Name"
            android:textColor="@color/white"
            android:maxLength="20"
            android:inputType="textCapWords" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_userid"
        style="@style/MaterialInputView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/circularbordersolid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_username">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userid_edittext"
            style="@style/MaterialInputTextField"
            android:layout_width="match_parent"
            android:background="@drawable/circularbordersolid"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/text_input_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="User Id"
            android:textColor="@color/white"
            android:maxLength="20"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_login"
        app:layout_constraintTop_toBottomOf="@id/text_input_userid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Back to Login"
        android:textColor="@color/orange_light"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/open_sans_semi_bold"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/orange_dark"
        android:insetBottom="0dp"
        android:background="@drawable/button_background"
        android:text="@string/create_account"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:progressBackgroundTint="@color/orange_dark"
        android:visibility="invisible"
        />


</androidx.constraintlayout.widget.ConstraintLayout>